# AI-Autonomous-Room-Rover-Robot-A2R3

./: A2R3_odometry  README.md
A2R3/: A2R3 _PID _control.ino  A2R3_Odometry _test.ino  A2R3_PID_OTA.ino  A2R3_obstacle_avoidance.c  A2R3_odometry.ino  A2R3_ros2_control.ino  drive_PID_OTA.ino  icons.h
ROS2_playgrounds/diff_drive_robot/: package.xml  setup.py
ROS2_playgrounds/diff_drive_robot/diff_drive_robot/: motor_control.py  obstacle_avoidance.py  sensor_node.py
ROS2_playgrounds/diff_drive_robot/launch/: display_rviz.launch.py  robot_launch.py
ROS2_playgrounds/diff_drive_robot/rviz/: robot.rviz
ROS2_playgrounds/diff_drive_robot/scripts/: diff_drive_tf.py
ROS2_playgrounds/diff_drive_robot/urdf/: diff_drive_robot.urdf  diff_drive_robot.urdf.xacro  robot.urdf
ROS2_playgrounds/ros2_control/: ros2_control.ino
