<?xml version="1.0"?>
<package format="3">
  <name>diff_drive_robot</name>
  <version>0.0.0</version>
  <description>Differential drive robot package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
